--- a/logic-room/src/routes/Layout.css
+++ b/logic-room/src/routes/Layout.css
@@ -1,3 +1,7 @@
+:root {
+  --primary-color: hsl(204, 20%, 5%);
+}
+
 .container {
   display: grid;
   grid-template-rows: auto 1fr auto;
@@ -8,7 +12,7 @@
 .navbar {
   display: flex;
   justify-content: space-around;
-  background-color: #f8f9fa;
+  background-color: var(--primary-color);
   padding: 1rem;
   width: 100%; /* This will make the navbar span the entire width */
   height: 60px; /* This will keep the height fixed. Adjust as needed */
@@ -20,7 +24,7 @@
 }
 
 .footer {
-  background-color: #f8f9fa;
+  background-color: var(--primary-color);
   text-align: center;
   padding: 1rem;
 }
